src/objects/ffr__ReportingPromptMapping__c.object
<CustomObject>
    <customHelpPage>ffr__helpreportingpromptmapping</customHelpPage>
    <fields>
        <fullName>ffr__PromptTag__c</fullName>
        <label>Prompt Tag</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__ReportingFilter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Filter</label>
        <referenceTo>ffr__ReportingFilter__c</referenceTo>
        <relationshipLabel>Reporting Prompt Mappings</relationshipLabel>
        <relationshipName>ReportingPromptMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__ReportingPrompt__c</fullName>
        <label>Reporting Prompt</label>
        <referenceTo>ffr__ReportingPrompt__c</referenceTo>
        <relationshipLabel>Reporting Prompt Mappings</relationshipLabel>
        <relationshipName>ReportingPromptMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Reporting Prompt Mapping</label>
    <nameField>
        <displayFormat>RPM{000000}</displayFormat>
        <label>Reporting Prompt Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reporting Prompt Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>